Sat Sep 18 22:38:22 UTC 2010  Scott Harris  <harris_s@ociweb.com>

        * tao/String_Manager_T.h:

          Added equality operators per Bugzilla #3844.

Fri Sep 17 22:15:54 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * tao/Codeset/Codeset.mpc:
        * tao/Strategies/Strategies.mpc:
        * tao/Valuetype/Valuetype.mpc:

          Restoring "make install" functionality (installing all needed
          headers, inline files, and template files) which was lost when these
          mpc files were moved.  Still need to fix some or all of the other mpc
          files (at least ImR_Client).

Fri Sep 17 20:44:43 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * orbsvcs/orbsvcs/AV/QoS_UDP.cpp:

          Added include of OS_NS_strings.h for ACE_OS::strcasecmp().

Fri Sep 17 20:20:37 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * tao/AnyTypeCode/AnyTypeCode.mpc:
        * tao/BiDir_GIOP/BiDir_GIOP.mpc:
        * tao/CSD_Framework/CSD_Framework.mpc:
        * tao/CSD_ThreadPool/CSD_ThreadPool.mpc:
        * tao/CodecFactory/CodecFactory.mpc:
        * tao/Codeset/Codeset.mpc:
        * tao/Compression/Compression.mpc:
        * tao/Compression/bzip2/Bzip2Compressor.mpc:
        * tao/Compression/lzo/LzoCompressor.mpc:
        * tao/Compression/zlib/ZlibCompressor.mpc:
        * tao/DiffServPolicy/DiffServPolicy.mpc:
        * tao/DynamicAny/DynamicAny.mpc:
        * tao/DynamicInterface/DynamicInterface.mpc:
        * tao/ETCL/TAO_ETCL.mpc:
        * tao/EndpointPolicy/EndpointPolicy.mpc:
        * tao/FlResource/FlResource.mpc:
        * tao/FoxResource/FoxResource.mpc:
        * tao/IFR_Client/IFR_Client.mpc:
        * tao/IORInterceptor/IORInterceptor.mpc:
        * tao/IORManipulation/IORManipulation.mpc:
        * tao/IORTable/IORTable.mpc:
        * tao/ImR_Client/ImR_Client.mpc:
        * tao/Messaging/Messaging.mpc:
        * tao/Monitor/Monitor.mpc:
        * tao/ObjRefTemplate/ObjRefTemplate.mpc:
        * tao/PI/PI.mpc: